--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -3,7 +3,7 @@ app.stackTitle=Application stack:
 app.description=<a href="https://github.com/JavaOPs/topjava">Java Enterprise project</a> with registration/authorization and role-based access rights (USER, ADMIN). \
 Admin could create/edit/delete users, users - manage your profile and data (meals) via UI (AJAX) and REST with basic authorization. \
 Meals could be filtered by date and time. Meal record color depends on daily calories sum exceeding "Daily calorie limit" (editable user's profile parameter). \
-All REST interface covered with JUnit tests by Spring MVC Test и Spring Security Test.
+All REST interface covered with JUnit tests by Spring MVC Test and Spring Security Test.
 app.footer=<a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a> internship application
 app.login=Login as
 app.profile=profile
@@ -20,6 +20,11 @@ user.active=Active
 user.registered=Registered
 user.password=Password
 user.caloriesPerDay=Daily calorie limit
+
+userTo.name=Name
+userTo.email=Email
+userTo.password=Password
+userTo.caloriesPerDay=Daily calorie limit
 
 meal.title=Meals
 meal.edit=Edit meal
@@ -39,8 +44,24 @@ common.deleted=Record deleted
 common.saved=Record saved
 common.enabled=Record enabled
 common.disabled=Record disabled
-common.errorStatus=Error status
-common.appError=Application error
 common.confirm=Are you sure?
 common.save=Save
 common.cancel=Cancel
+common.search=Search
+
+exception.user.duplicateEmail=User with this email already exists
+exception.meal.duplicateDateTime=You already have meal with this date/time
+
+error.appError=Application error
+error.dataNotFound=Data not found
+error.dataError=Data error
+error.validationError=Validation error
+error.wrongRequest=Wrong request
+
+NotEmpty=[{0}] must not be empty
+NotBlank=[{0}] must not be empty
+NotNull=[{0}] must not be empty
+Email= Invalid format of [{0}]
+Range=[{0}] must be between {2} and {1}
+Length=[{0}] length must be between {2} and {1}
+Size=[{0}] size must be between {2} and {1}
